# FlowVersion

./: Cargo.toml  README.md  SETUP.md  flowversion-design.md  flowversion-requirements.md  test_scenario.md
.claude/: settings.local.json
src/: error.rs
src/cli/: commands.rs  handlers.rs
src/core/: commit.rs  intention.rs  mod.rs  objects.rs  repository.rs  stream.rs
src/storage/: config.rs  index.rs  mod.rs  object_store.rs
src/utils/: diff.rs  fs.rs  hash.rs  mod.rs
test_project/: README.md  main.py  utils.py
ts-cli/: DEVELOPING.md  README.md  package-lock.json  package.json
ts-cli/.flow/: commits.json  commits.json.bak-2025-08-14T13-21-39-820Z  config.yml  index.json.bak-2025-08-14T13-21-39-824Z  repo.json
ts-cli/src/: index.ts
ts-cli/src/utils/: config.ts  json.ts
